# ghzPython

./: README.md
Python Data Structure/: Stack.py  baseConverter.py  divideBy2.py  parChecker.py  parenthesesCheck.py
fastAPI/fastapi_code/fastapi_code/: CORS.html  README.md  crud21.py  crud24.py  main.py  main01.py  main02.py  main03.py  main04.py  main05.py  main06.py  main07.py  main08.py  main09.py  main10.py  main11.py  main12.py  main13.py  main14.py  main15.py  main16.py  main17.py  main18.py  main19.py  main20.py  main21.py  main25.py  main26.py  main27.py  main28.py  main29.py  model19.py  model20.py  model21.py  model22.py  model23.py  (+2 more)
fastAPI/fastapi_code2/: DI1.py  DI2.py  DI3.py  DI4.py  DI5.py  DI6.py  pyproject.toml
fastAPI/fastapi_code2/ddd/: main.py  pyproject.toml
fastAPI/fastapi_code2/ddd/app/application/common/: exception.py
fastAPI/fastapi_code2/ddd/app/application/user/commands/: login_user.py  register_user.py
fastAPI/fastapi_code2/ddd/app/application/user/queries/: get_orders.py
fastAPI/fastapi_code2/ddd/app/domain/shared/: vo.py
fastAPI/fastapi_code2/ddd/app/domain/user/: entity.py  repository.py
fastAPI/fastapi_code2/ddd/app/infrastructure/database/: mappers.py  orm_models.py
fastAPI/fastapi_code2/ddd/app/infrastructure/repository/: user_impl.py
fastAPI/fastapi_code2/ddd/app/interface/: dependency.py
fastAPI/fastapi_code2/ddd/app/interface/api/v1/: auth_router.py  order_router.py
fastAPI/fastapi_code2/ddd/config/: settngs.py
fastAPI/fastapi_code2/ddd/data/: test.db
fastAPI/md文档(1)/: FastAPI文档.md  FastAPI进阶2.md
(+132 files in other folders)
